# wstick-packer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config
src/: cli.rs  main.rs
src/packer/: mod.rs  stickerinfo.rs  stickerpack.rs
