[package]
name = "wstick-packer"
version = "0.1.0"
authors = ["William Wagner Moraes Artero <williamwmoraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
base64 = "*"
md5 = "*"

[[bin]]
name = "wstick-packer"
path = "src/main.rs"
